Fix scrollbars. Scroll the highlighted element into view on pop-out queries

--- a/app/assets/stylesheets/big_query_log_viewer/application.css.less
+++ b/app/assets/stylesheets/big_query_log_viewer/application.css.less
@@ -99,6 +99,7 @@ ul.nav {
 
   >div {
     overflow-y: scroll;
+    max-height: ~"calc( 100vh - 170px )";
   }
 }
 
